@@ -1,5 +1,5 @@
 /*
-    Copyright 2008-2009, Felspar Co Ltd. http://fost.3.felspar.com/
+    Copyright 2008-2012, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -25,13 +25,15 @@ FSL_TEST_FUNCTION( basic ) {
     FSL_CHECK_EQ(iso[1], '0');
     FSL_CHECK_EQ(iso[4], '-');
 
-    FSL_CHECK_NOTHROW(fostlib::rfc1123_timestamp rfc1123(fostlib::coerce< fostlib::rfc1123_timestamp >(n)));
+    FSL_CHECK_NOTHROW(fostlib::rfc1123_timestamp rfc1123(
+        fostlib::coerce< fostlib::rfc1123_timestamp >(n)));
 }
 
 
 FSL_TEST_FUNCTION( json ) {
-    fostlib::timestamp n(fostlib::timestamp::now());
+    fostlib::timestamp n(fostlib::timestamp(2012, 10, 4, 13, 45));
     fostlib::json j( fostlib::coerce< fostlib::json >( n ) );
     FSL_CHECK(!j.get< fostlib::string >().isnull());
+    FSL_CHECK_EQ( j, fostlib::json("2012-10-04T13:45:00Z") );
     FSL_CHECK_EQ( fostlib::coerce< fostlib::timestamp >( j ), n );
 }
